main.tf
provider "aws" {
  region = "us-west-2"
}

resource "aws_instance" "deham6demo"{
    ami = "ami-0fa167c2af1ea0840"
    instance_type = "t3.micro"
    key_name = "vockey"
    vpc_security_group_ids = ["sg-0e45a52719eb759fd"]
    subnet_id = "subnet-0bb7d846cd02da113"
    tags = {
        Name = "deham6demo"
    }
}
